vpc/vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC resources for the Serverless API Example
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: 'Name'
          Value: 'Serverless API Example'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    DependsOn: VPC
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # The Public subnets connect to the internet gateway
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.10.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs us-east-1
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.20.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs us-east-1
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
          - Key: "Name"
            Value: "Public Route Table"
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # The private subnets hold the application
  # They utilize endpoints to communicate with resources outside of the subnet.
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.30.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 0
        - !GetAZs us-east-1
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.40.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 1
        - !GetAZs us-east-1
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
          - Key: "Name"
            Value: "Private Route Table"
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # Allows instances in the private subnet to make requests to the internet
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATIP.AllocationId
      SubnetId: !Ref PublicSubnet1
  NATPrivateRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: NATGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  NATIP:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc
      # InstanceId: String
      # PublicIpv4Pool: String
      # Tags: 
      #   - Tag


Outputs:
  VPC:
    Description: The Id of the VPC
    Value: !Ref VPC  # This is the VPC's default security group.
    Export:
      Name: SAPIE-VPC
  VPCDefaultSG:
    Description: Serverless API Example Default Security Goup
    Value: !GetAtt
      - VPC
      - DefaultSecurityGroup
    Export:
      Name: SAPIE-VPC-SG
  PublicSubnet1:
    Description: The Id of PublicSubnet1
    Value: !Ref PublicSubnet1
    Export:
      Name: SAPIE-VPC-PublicSubnet1
  PublicSubnet2:
    Description: The Id of PublicSubnet2
    Value: !Ref PublicSubnet2
    Export:
      Name: SAPIE-VPC-PublicSubnet2
  PrivateSubnet1:
    Description: The Id of PrivateSubnet1
    Value: !Ref PrivateSubnet1
    Export:
      Name: SAPIE-VPC-PrivateSubnet1
  PrivateSubnet2:
    Description: The Id of PrivateSubnet2
    Value: !Ref PrivateSubnet2
    Export:
      Name: SAPIE-VPC-PrivateSubnet2
